improvements / general refactor
